tests/fsharp/typecheck/sigs/neg_byref_21.bsl

neg_byref_21.fs(4,5,4,7): typecheck error FS0425: The type of a first-class function cannot contain byrefs
